--- a/index.html
+++ b/index.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
-<head>
-    <title>MusicBoxed</title>
-</head>
 
-<body>
-    <h1>MusicBoxed</h1>
-    <ul>
-        <li>Design -- Meeting next Wednesday (February 4th) </li>
-        <li>Figuring out our components</li>
-    </ul>
-</body>
+<html>
+    <head>
+        <title>MusicBoxed</title>
+        <link rel="stylesheet" href="CSS/style.css">
+    </head>
+
+    <body>
+
+
+        <nav>    
+            <h1 id="Logo">M u s i c B o x d</h1>
+
+            <ul class="menu">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Artists</a></li>
+                <li><a href="#">Sign Up!</a></li>
+            </ul>
+        </nav>
+
+
+        <div class="header">
+
+        </div>
+
+
+    </body>
+
+</html>
