--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <html>
     <head>
         <title>MusicBoxed</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="CSS/style.css">
     </head>
 
