Testing - Inputs and CSS
Adding forms for signin and startin database

--- a/signin.html
+++ b/signin.html
@@ -6,6 +6,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="CSS/style.css">
+        <link rel="stylesheet" href="CSS/signin.css">
     </head>
 
     <body>
@@ -18,14 +19,19 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Artists</a></li>
                 <li><a href="#">Playlists</a></li>
-                <li><a href="signin.html">Sign In!</a></li>
+                <li><a href="#">Sign In!</a></li>
             </ul>
         </nav>
 
-
-        <div class="header">
-
+        <div class="sign-in-box">
+            <div>
+                <form>
+                    <input>
+                </form>
+            </div>
         </div>
+
+
 
 
     </body>
